--- a/search/config.toml
+++ b/search/config.toml
@@ -2,7 +2,7 @@ index = "idx"
 corpus = "line.toml"
 dataset = "data"
 prefix = "."
-stop-words = "search/agerman-stopwords.txt"
+stop-words = "search/german-stopwords.txt"
 start-exceptions = "search/sentence-start-exceptions.txt"
 end-exceptions = "search/sentence-end-exceptions.txt"
 function-words = "search/function-words.txt"
